fix ion-menu profiledetail dark mode

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -89,3 +89,9 @@
     margin: 15px;
     display: flex;
 }
+
+.darkContainer{
+    .white{
+        color: #ffffff;
+    }
+}
